<resources>
    <string name="app_name">HomeTogether</string>
    <string name="usernameLabel">Username:</string>
    <string name="passwordLabel">Password:</string>
    <string name="signUpButton">Sign Up!</string>
    <string name="loginButton">Log In!</string>
    <string name="newHouseButton">Create new household</string>
    <string name="newHouseholdNameLabel">Household Name:</string>
    <string name="createHouseHold">Create!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createButtonText">Create</string>
    <string name="nameLabel">Name:</string>
    <string name="quantityLabel">Quantity:</string>
    <string name="categoryLabel">Category:</string>
    <string name="tagLabel">Tags (Comma Separated):</string>
    <string name="expireLabel">Expires:</string>
    <string name="deleteButton">Delete</string>
    <string name="modifyButton">Modify</string>
    <string name="pantrySearchBarText">Enter Text to Search</string>
    <string name="pantryItemFormExpiresHint">Tap to set date, swipe right for never expires</string>
    <string name="householdSelectionSwipeUpHint">Swipe up to create a new household!\n Swipe down to refresh list.</string>
    <string name="householdSelectionGreeting">Welcome to your households</string>
    <string name="NeverExipiresString">Never Expires</string>
    <string name="neverExpiresString">Never Expires</string>
    <string name="addMemberText">Add member</string>
    <string name="markBoughtText">Mark Bought and Move to Pantry</string>
</resources>
